# gridsense

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ruff.toml
.github/workflows/: databricks-bundle-deploy.yml  terraform-apply.yml  terraform-plan.yml
databricks/: databricks.yml
databricks/resources/jobs/: backfill_carbon_intensity.yml  backfill_entsoe.yml  backfill_open_meteo.yml  bronze_carbon_intensity.yml  bronze_entsoe.yml  bronze_open_meteo.yml  gold_dim_country.yml  gold_dim_fuel_type.yml  gold_dim_time.yml  gold_dim_uk_region.yml  gold_fact_carbon_intensity_30min.yml  gold_fact_generation_fuel_hourly.yml  gold_fact_grid_hourly.yml  ml_features_carbon_forecast.yml  ml_infer_carbon_forecast.yml  ml_train_carbon_forecast.yml  silver_carbon_intensity.yml  silver_country_dim.yml  silver_entsoe.yml  silver_grid_state.yml  silver_open_meteo.yml
databricks/src/backfill/: backfill_carbon_intensity.py  backfill_entsoe.py  backfill_open_meteo.py
databricks/src/bronze/: carbon_intensity_bronze.py  common.py  entsoe_bronze.py  open_meteo_bronze.py  phase3_smoke_test.py
databricks/src/gold/: dim_country.py  dim_fuel_type.py  dim_time.py  dim_uk_region.py  fact_carbon_intensity_30min.py  fact_generation_fuel_hourly.py  fact_grid_hourly.py
databricks/src/ml/: features_carbon_forecast.py  infer_carbon_forecast.py  train_carbon_forecast.py
databricks/src/silver/: carbon_intensity_silver.py  common.py  country_dim_silver.py  entsoe_silver.py  grid_state_silver.py  open_meteo_silver.py
docs/: PHASE10.md  PHASE11.md  PHASE8.md  PHASE9.md  architecture.md  runbook.md
docs/sql/: README.md
docs/sql/dashboards/d1_uk_carbon_live/: README.md  uk_intensity_24h_timeseries.sql  uk_kpis_latest.sql  uk_latest_intensity.sql
docs/sql/dashboards/d2_european_fuel_mix/: README.md  eu_co2_24h_per_country.sql  eu_fuel_mix_latest_hour.sql  eu_kpis_latest_hour.sql
docs/sql/dashboards/d3_lakehouse_health/: README.md  freshness_per_table.sql  kpi_lakehouse_summary.sql  layer_row_counts.sql
docs/sql/demos/: carbon_intensity_24h_per_region.sql  germany_fuel_mix_lifecycle_carbon.sql  uk_regional_carbon_spread.sql
docs/sql/verification/: chain_catchup_all_layers_freshness.sql  chain_catchup_silver_gold_parity.sql  phase7a_measure_quality.sql  phase7a_row_counts.sql  phase7b_fact_grid_hourly_summary.sql  phase7b_fact_summary.sql  phase7b_orphan_check.sql  phase8a_backfill_summary.sql  phase8b_backfill_summary.sql  phase8c_backfill_summary.sql  phase8d1_features_summary.sql  phase8d2_training_summary.sql  phase8d3_inference_summary.sql
infra/envs/dev/: .terraform.lock.hcl  main.tf
infra/modules/container-apps/: main.tf  outputs.tf  variables.tf
infra/modules/databricks/: main.tf  outputs.tf  variables.tf
infra/modules/eventhubs/: main.tf  outputs.tf  variables.tf
infra/modules/foundation/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/modules/github_oidc/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
producers/_common/: pyproject.toml
producers/_common/src/gridsense_common/: __init__.py  auth.py  envelope.py
producers/carbon-intensity/: .dockerignore  Dockerfile  pyproject.toml
producers/carbon-intensity/src/: main.py
producers/carbon-intensity/tests/: test_envelope.py
producers/entsoe/: .dockerignore  Dockerfile  pyproject.toml
producers/entsoe/src/: main.py
producers/entsoe/tests/: test_envelope.py
producers/open-meteo/: .dockerignore  Dockerfile  pyproject.toml
producers/open-meteo/src/: main.py
producers/open-meteo/tests/: test_envelope.py
streamlit_app/: README.md  app.py  requirements.txt
streamlit_app/.streamlit/: secrets.toml.example
streamlit_app/agent/: __init__.py  llm.py  prompts.py  rate_limit.py  tools.py
