[project]
name = "carbon-intensity-producer"
version = "0.1.0"
description = "Polls the UK Carbon Intensity API and publishes events to Azure Event Hubs"
requires-python = ">=3.11"
authors = [
    { name = "Jayanth Dolai" }
]
dependencies = [
    "httpx>=0.27",
    "aiokafka>=0.11",
    "pydantic>=2.7",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "azure-identity>=1.17",
    "tenacity>=8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow `assert False` in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
