[project]
name = "entsoe-producer"
version = "0.1.0"
description = "Polls ENTSO-E Transparency Platform and publishes generation mix to Azure Event Hubs"
requires-python = ">=3.11"
authors = [{ name = "Jayanth Dolai" }]
dependencies = [
    "httpx>=0.27",
    "aiokafka>=0.11",
    "pydantic>=2.7",
    "structlog>=24.1",
    "azure-identity>=1.17",
    "tenacity>=8.2",
    "aiohttp>=3.9",
    "xmltodict>=0.13",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
